# PowerMagic

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
derive-macro/: Cargo.toml
derive-macro/src/: lib.rs
powermagic/: Cargo.toml
powermagic/src/: error.rs  main.rs  manager.rs  model.rs  unit.rs
powermagic/src/unit/: cache.rs  calc.rs  data.rs  define.rs  state.rs  utils.rs
powermagic/src/unit/utils/: round.rs
