[package]
name = "powermagic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-macro = { path = "../derive-macro" }
itertools = "0"
num-traits = '*'
nalgebra = "0"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
thiserror = '*'
